[package]
name = "test_logger"
version = "1.0.0"
edition = "2021"
authors = ["Isaac Duke"]
description = "A test event logger with timestamps and tagging, outputting TXT and CSV logs."

[dependencies]
chrono = "0.4"          # For local/UTC timestamps
clap = { version = "2.34", features = ["suggestions"] }  # For CLI flag parsing
rustyline = "13"